# Dijkstras-Algorithm

./: CMakeLists.txt  main.cpp
include/: graph.h  graphMatrix.h  node.h
src/: dijkstra.cpp  graph.cpp  graphMatrix.cpp  node.cpp
test/: maintest.cpp
